[tool.poetry]
name = "mlholdouts"
version = "0.1.0"
description = ""
authors = ["davips <dpsabc@gmail.com>"]
readme = "README.md"
packages = [{include = "mlholdouts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
